--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Mi Sitio Web - GitHub Pages</title>
+    <title>Práctica 1 - Redes</title>
 </head>
 <body>
 
-    <h1>Proyecto de Despliegue Web</h1>
+    <h1>Práctica 1 - DNS y Hosting</h1>
     
     <h2>Datos del Alumno</h2>
     <p>Nombre: <strong>[Jorge Fernández Santalices]</strong></p>
