--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <h2>Datos del Alumno</h2>
     <p>Nombre: <strong>[Jorge Fernández Santalices]</strong></p>
-    <p>Correo: <strong>[jorge.fernandez.santalices@udc.es]</strong></p>
+    <p>Correo: <strong>[<a href="jorge.fernandez.santalices@udc.es">]</strong></p>
 
     <h2>Enlaces de Interés</h2>
     <p>Servicio utilizado para gestión de dominios: 
